# FatRayTracer

./: .gitignore  CMakeLists.txt  bar.sh
include/Core/: Ray.h  SceneObject.h  Sphere.h  Triangle.h  Vector.h
include/RSimpl/Core/: BaseTriangle.h  Cube.h  SceneObject.h  Vector.h
include/RTimpl/Core/: Ray.h  SceneObject.h  Sphere.h  Triangle.h  Vector.h
include/RTimpl/Render/: Camera.h  PixelBuffer.h
include/Render/: Camera.h  PixelBuffer.h
include/Utils/: Color.h
src/: main.cpp
src/Core/: Ray.cpp  Sphere.cpp  Triangle.cpp  Vector.cpp
src/RSimpl/Core/: BaseTriangle.cpp  Cube.cpp  SceneObject.cpp
src/RTimpl/Core/: Ray.cpp  SceneObject.cpp  Sphere.cpp  Triangle.cpp  Vector.cpp
src/RTimpl/Render/: Camera.cpp  PixelBuffer.cpp
src/RTimpl/Utils/: Color.cpp
src/Render/: Camera.cpp  PixelBuffer.cpp
src/Utils/: Color.cpp
